# cloth_opt

./: .gitignore  CMakeLists.txt  README.md  demo.py  environment.yml  pyproject.toml
configs/: demo.yaml  diagonal_fold.yaml  optimize.yaml  position_demo.json  sim_cloth.json  symmetric_fold.yaml
configs/env/: default.yaml
configs/optimizer/: cem.yaml
configs/policy/: diagonal_fold.yaml  symmetric_fold.yaml
configs/render/: debug.yaml  disabled.yaml  enabled.yaml  native.yaml
configs/task/: symmetric_fold.yaml
configs/trajectory/: edge_position.yaml
cpp/apps/: optimization.cpp  simulation.cpp  visualization.cpp
cpp/bindings/: CMakeLists.txt  bindings.cpp
cpp/bindings/compat/tbb/: blocked_range.h  combinable.h  parallel_for.h
cpp/include/cloth_opt/: cloth.h  controller.h  integrator.h  mesh.h
cpp/src/: cloth.cpp  controller.cpp  integrator.cpp  mesh.cpp
python/: CMakeLists.txt  bindings.cpp
python/compat/tbb/: blocked_range.h  combinable.h  parallel_for.h
scripts/: demo.py  diagonal_fold.py  optimize.py  sim_cloth.py  symmetric_fold.py
src/cloth_opt/: __init__.py  action.py  engine.py  env.py  render.py
src/cloth_opt/experiments/: __init__.py  symmetric_fold.py
src/cloth_opt/optimization/: __init__.py  cem.py
src/cloth_opt/policy/: __init__.py  base.py  base_policy.py  demo.py  fold_metrics.py
src/cloth_opt/policy/diagonal_fold/: __init__.py  rollout.py  rule_policy.py
src/cloth_opt/policy/symmetric_fold/: __init__.py  rollout.py  rule_policy.py
src/cloth_opt/sim/: __init__.py  config.py  render.py
src/cloth_opt/sim/engine/: __init__.py  cpp.py
src/cloth_opt/tasks/: __init__.py  symmetric_fold.py
