[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "cloth-opt"
version = "0.1.0"
description = "Python optimization interface for the ClothOpt C++ simulator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
video = ["matplotlib>=3.7"]

[tool.scikit-build]
cmake.source-dir = "python"
wheel.packages = ["src/cloth_opt"]
build-dir = "build/python/{wheel_tag}"
