[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "cloth-opt"
version = "0.1.0"
description = "Python optimization interface for the ClothOpt C++ simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "numpy>=1.23",
    "matplotlib"
]


[tool.scikit-build]
cmake.source-dir = "cpp/bindings"
wheel.packages = ["src/cloth_opt"]
build-dir = "build/python/{wheel_tag}"
